tests/rt/pos/core/tuplepatterns01a.trp
let fun f () = (1) in
  case f () of
    (1) => true
  end