tests/rt/neg/core/funpat.trp
let fun isOne 1 = true
    and isTwo 2 = true 
in isTwo () 
end
